<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/c1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/e1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/background_light"
        android:ems="10"
        android:hint="@string/t0"
        android:inputType="textPersonName"
        android:text="@string/t0"
        android:textAlignment="viewEnd"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round"
        android:text="@string/ac"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintEnd_toStartOf="@+id/b2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e1" />

    <Button
        android:id="@+id/b2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round"
        android:text="@string/a"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintEnd_toStartOf="@+id/b3"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/e1" />

    <Button
        android:id="@+id/b3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round"
        android:text="@string/b"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintEnd_toStartOf="@+id/b4"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/e1" />

    <Button
        android:id="@+id/b4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round1"
        android:text="@string/c"
        android:textColor="@android:color/background_light"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/b5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b3"
        app:layout_constraintTop_toBottomOf="@+id/e1" />

    <Button
        android:id="@+id/b5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round2"
        android:text="@string/_7"
        android:textSize="33sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/b9"
        app:layout_constraintEnd_toStartOf="@+id/b6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/b6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round2"
        android:text="@string/_8"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b9"
        app:layout_constraintEnd_toStartOf="@+id/b7"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/b7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round2"
        android:text="@string/_9"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b9"
        app:layout_constraintEnd_toStartOf="@+id/b8"
        app:layout_constraintStart_toEndOf="@+id/b6"
        app:layout_constraintTop_toBottomOf="@+id/b1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round1"
        android:text="@string/x"
        android:textColor="@android:color/background_light"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/b9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/b9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round2"
        android:textColor="@android:color/background_light"
        android:text="@string/_4"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b13"
        app:layout_constraintEnd_toStartOf="@+id/b10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/b10"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round2"
        android:text="@string/_5"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b13"
        app:layout_constraintEnd_toStartOf="@+id/b11"
        app:layout_constraintStart_toEndOf="@+id/b9"
        app:layout_constraintTop_toBottomOf="@+id/b5"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/b11"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round2"
        android:text="@string/_6"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b13"
        app:layout_constraintEnd_toStartOf="@+id/b12"
        app:layout_constraintStart_toEndOf="@+id/b10"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/b12"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round1"
        android:text="@string/_m"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/b13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b11"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/b13"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round2"
        android:text="@string/_1"
        android:textSize="33sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/b17"
        app:layout_constraintEnd_toStartOf="@+id/b14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b9" />

    <Button
        android:id="@+id/b14"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round2"
        android:text="@string/_2"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b17"
        app:layout_constraintEnd_toStartOf="@+id/b15"
        app:layout_constraintStart_toEndOf="@+id/b13"
        app:layout_constraintTop_toBottomOf="@+id/b9"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/b15"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round2"
        android:text="@string/_3"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/b17"
        app:layout_constraintEnd_toStartOf="@+id/b16"
        app:layout_constraintStart_toEndOf="@+id/b14"
        app:layout_constraintTop_toBottomOf="@+id/b9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b16"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round1"
        android:text="@string/_p"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/b17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b15"
        app:layout_constraintTop_toBottomOf="@+id/b9" />

    <Button
        android:id="@+id/b17"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round2"
        android:text="@string/_0"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b13" />

    <Button
        android:id="@+id/b18"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round2"
        android:text="@string/_d"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b19"
        app:layout_constraintStart_toEndOf="@+id/b17"
        app:layout_constraintTop_toBottomOf="@+id/b13"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b19"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round1"
        android:text="@string/_e"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b18"
        app:layout_constraintTop_toBottomOf="@+id/b13" />

</androidx.constraintlayout.widget.ConstraintLayout>